Bug 1716196 - Misleading log message: "AppleVTDecoder: system doesn't support hardware acceleration". r=jolin

Differential Revision: https://phabricator.services.mozilla.com/D118296